# dotfiles

./: .bash_profile  .gen_shell  .gitconfig  .gitignore  .nvimrc  .psqlrc  .shared.sh  .tmux.conf  .vimrc  .zshrc  README.md  TODO.md  alacritty.yml  args.gn  flake.nix  home.nix  install-home-manager.sh  install-nix.sh  install.sh  track-current.sh  vmd
.vim/bundle/: install-plugins.bash
cheatsheets/: tmux.md
config/: git.nix  init.vim  nvim.nix  nvimrc.vim  shared.sh  tmux.conf  tmux.nix  zsh.nix
config/git/: .gitignore
config/help/: chrome  debug  keyboard  mission-control  netstat  ngrep  sort  tmux
config/nvim/: init.lua  lazy-lock.json  lazyvim.json  plugins.lua  vimrc.vim
config/shell/: git.sh  help.sh  node.sh  shared.sh  util.sh  vim.sh
config/tmux/: tmux.conf
config/zsh/: .zshenv  .zshrc  chromium.sh  util.sh
help/: ag  curl  disk-space  diskspace  fd  git  help  nc  perf  sed  tcpdump  tmux
home/: .zshrc
nix/: ls-colors.nix  sources.json
old/: .gitignore  README.md  flake.nix
old/config/: git.nix  nvim.nix  tmux.conf  tmux.nix
old/ranger/: commands.py
old/scripts/: codemod  rewrite-git-author.sh
old/sqls/: config.yml
pgcli/: config
ranger/: rc.conf
scripts/: apt-install.sh  brew-install.sh  cpwd  custom-vmd-styles.css  how-many-commits  install-nvm  install-ranger  install-yarn  install-zsh  install.sh  node_env  node_grep  node_interactive_vscode.sh  npm-globals-install.sh  pull-requests  setup.sh  virtualnode.sh
scripts/canary/: canary.js  package.json
shell/: cd.sh  git.sh  util.sh
sqls/: config.yml
(+45 files in other folders)
